[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["zhicfeng <zhicfeng@cisco.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.20"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
